--- a/javascript/projects.JSON
+++ b/javascript/projects.JSON
@@ -5,8 +5,28 @@
         "language": ["ru","en"],
         "type": [
             ["Regular", ["text"]],
-            ["RWP", ["header1", "text1", "button_name1","header2", "text2", "button_name2"]],
-            ["FTD", ["text", "button_name"]],
+            ["RWP", ["text"]],
+            ["FTD", ["text"]],
+            ["Birthday", ["header1", "header2", "text1"]]
+        ],
+        "segments": [
+            ["Regular", ["dep", "nodep"]],
+            ["RWP", ["1day", "3day", "5day", "7day", "9day", "12day", "15day"]],
+            ["FTD", ["1day >50 usd", "1day <50 usd", "3day", "5day", "6day done", "6day not done", "9day", "13day"]],
+            ["Birthday", ["never dep", "netdep <365", "netdep 365|720"]]
+        ],
+        "date": ""
+    },
+    {
+        "id": 2,
+        "name": "Mister X",
+        "language": ["ru","en"],
+        "type": [
+            ["Regular", ["text"]],
+            ["RWP", ["text"]],
+            ["FTD", ["text"]],
+            ["reg", ["text", "button_name"]],
+            ["postreg", ["text", "button_name"]],
             ["CTA", ["text", "button_name"]]
         ],
         "segments": [
@@ -18,20 +38,44 @@
         "date": ""
     },
     {
-        "id": 2,
-        "name": "Mister X",
-        "language": ["ru","en"],
+        "id": 3,
+        "name": "Slottica",
+        "language": ["ru","en", "de", "pl", "tr", "uk", "es", "pt", "fi", "no", "cs", "sv", "ja"],
         "type": [
-            ["Regular", ["text"]],
+            ["Regular", ["header1", "text1", "button_name1","header2", "text2", "button_name2","header3", "text3", "button_name3"]],
             ["RWP", ["header1", "text1", "button_name1","header2", "text2", "button_name2"]],
             ["FTD", ["text", "button_name"]],
+            ["Birthday", ["header1", "header2", "text1"]],
             ["CTA", ["text", "button_name"]]
         ],
         "segments": [
             ["Regular", ["dep", "nodep"]],
             ["RWP", ["dep", "nodep"]],
             ["FTD", ["dep", "nodep"]],
+            ["Birthday", ["never dep", "netdep <365", "netdep <365|720"]],
             ["CTA", ["dep", "nodep"]]
+        ],
+        "date": ""
+    },
+    {
+        "id": 4,
+        "name": "Fortune Clock",
+        "language": ["ru","en", "de", "pl", "tr", "es", "pt", "fi", "no", "cs", "sv", "fr"],
+        "type": [
+            ["Regular", ["header1", "text1", "button_name1","header2", "text2", "button_name2","header3", "text3", "button_name3"]],
+            ["RWP", ["text"]],
+            ["FTD", ["text"]],
+            ["Sport", ["text"]],
+            ["Birthday", ["header1", "header2", "text1"]],
+            ["Winners ", ["header0", "header1", "text"]]
+        ],
+        "segments": [
+            ["Regular", ["all"]],
+            ["RWP", ["1 day", "3 day", "5 day", "7 day", "9 day", "11 day", "12 day", "13 day", "14 day"]],
+            ["FTD", ["1 day", "3 day", "5 day", "6 day bonus", "6 day no bonus", "9 day", "12 day"]],
+            ["Sport", ["all"]],
+            ["Winners", ["all"]],
+            ["Birthday", ["never dep", "netdep <365", "netdep <365|720"]]
         ],
         "date": ""
     }
